# Foundry

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  release-readiness.yml
blueprints/: 00-master-backend-framework.md  01-query-system-v1-v3.md  02-collection-api.md  03-i18n-system.md  04-logging-system.md  05-storage-system.md  06-datatable-system.md  07-email-system.md  08-app-builder-service-provider.md  09-remaining-preparation.md  10-app-enum-system.md  11-framework-improvements.md  12-auth-actor-system.md  13-job-system.md  14-websocket-system.md  15-framework-gaps.md  16-production-hardening.md  17-framework-models-image-module.md  18-scheduler-hardening.md  19-plugin-system-v2.md  20-rust-ssot-contract-generation.md
database/migrations/: 000000000000_create_database_primitives.rs  000000000001_create_personal_access_tokens.rs  000000000002_create_password_reset_tokens.rs  000000000003_create_notifications.rs  000000000004_create_job_history.rs  000000000005_create_attachments.rs  000000000006_create_metadata.rs  000000000007_create_model_translations.rs  000000000008_create_countries.rs  000000000009_create_settings.rs  000000000010_create_audit_logs.rs  000000000011_create_auth_mfa_totp_factors.rs  000000000012_index_job_history_created_at.rs  000000000013_alter_model_translation_ids_to_text.rs  000000000014_add_notification_notifiable_type.rs
database/seeders/: 000000000001_countries_seeder.rs
docs/: api-reference.md  datatable-blueprint-status.md  public-api-contract.md  query-blueprint-status.md  release-checklist.md
docs/api/: index.md  root.md
docs/audits/: 2026-07-10-framework-audit.md  2026-07-10-gap-implementation-verification.md  2026-07-10-laravel-inspired-gap-report.md  2026-07-11-build-cost-baseline.md
docs/consumer-impact/: 2026-06-27-rust-ssot-contract-generation.md  2026-07-10-framework-completeness-upgrade.md
docs/guides/: README.md  auth.md  background-processing.md  caching-and-redis.md  cli-commands.md  database.md  datatable.md  email-and-notifications.md  getting-started.md  http-client.md  i18n.md  model-extensions.md  plugins.md  recipes.md  routes-and-middleware.md  storage-and-imaging.md  testing.md  typescript.md  validation.md  websocket.md
examples/: blueprint_http.rs  blueprint_typed.rs  phase25_auth.rs  phase2_websocket.rs  phase3_database_generic.rs  phase3_database_many_to_many.rs  phase3_database_model.rs  phase3_database_projection.rs  phase3_database_relations.rs  phase3_observability.rs  phase3_plugin.rs  phase3_redis.rs  phase3_worker.rs  phase4_database_lifecycle.rs
foundry-build/: Cargo.toml
foundry-build/src/: lib.rs
foundry-macros/: Cargo.toml
foundry-macros/src/: app_enum.rs  common.rs  foundry_id.rs  lib.rs  model.rs  openapi.rs  projection.rs  typescript.rs  validate.rs
src/: lib.rs  prelude.rs  public.rs
src/app_enum/: helpers.rs  mod.rs  trait.rs  types.rs
src/attachments/: callback.rs  mod.rs  orphans.rs
src/audit/: cli.rs  mod.rs
src/auth/: email_verification.rs  lockout.rs  mod.rs  password_reset.rs  session.rs  token.rs  token_store.rs
src/cache/: memory.rs  mod.rs  redis_store.rs  tagged.rs
src/cli/: dev.rs  io.rs  mod.rs
src/config/: api_docs.rs  api_docs_metadata.rs  env_publish.rs  mod.rs  publish.rs  (+1 more)
tests/: acceptance.rs  api_audit.rs  attachments_acceptance.rs  audit_acceptance.rs  auth_acceptance.rs  blueprint_fixture_acceptance.rs  database_acceptance.rs  database_lifecycle_acceptance.rs  datatable_acceptance.rs  derive_ui.rs  distributed_runtime_acceptance.rs  event_transaction_acceptance.rs  http_authorization_acceptance.rs  http_client_acceptance.rs  http_edge_acceptance.rs  http_model_path_acceptance.rs  logging_initialization_acceptance.rs  notification_queue_acceptance.rs  observability_acceptance.rs  phase2_acceptance.rs  plugin_acceptance.rs  plugin_fixture_acceptance.rs  public_api_acceptance.rs  support_stores_acceptance.rs  testing_layer_acceptance.rs  token_acceptance.rs  validate_derive_acceptance.rs  websocket_observability_acceptance.rs
tests/fixtures/blueprint_app/: Cargo.toml
tests/fixtures/blueprint_app/config/: 00-runtime.toml
tests/fixtures/blueprint_app/src/: lib.rs  main.rs
tests/fixtures/blueprint_app/src/app/: compile_checked_guide_examples.rs  datatables.rs  ids.rs  mod.rs  validation.rs
tests/fixtures/blueprint_app/src/app/commands/: mod.rs
tests/fixtures/blueprint_app/src/app/portals/: mod.rs
tests/fixtures/blueprint_app/src/app/providers/: app_service_provider.rs  mod.rs
tests/fixtures/blueprint_app/src/app/realtime/: mod.rs
tests/fixtures/blueprint_app/src/app/schedules/: mod.rs
tests/fixtures/blueprint_app/src/bootstrap/: app.rs  cli.rs  http.rs  mod.rs  scheduler.rs  websocket.rs
tests/fixtures/blueprint_app/tests/: split_bootstrap.rs
tests/fixtures/plugin_consumer_app/: Cargo.toml
tests/fixtures/plugin_consumer_app/config/: 00-runtime.toml
tests/fixtures/plugin_consumer_app/src/: main.rs
tests/fixtures/plugin_consumer_app/src/app/: providers.rs
tests/fixtures/plugin_consumer_app/src/bootstrap/: app.rs
tests/fixtures/plugin_consumer_app/tests/: plugin_bootstrap.rs
tools/: build-metrics.sh
(+377 files in other folders)
