[package]
name = "foundry_blueprint_fixture"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
chrono = "0.4"
foundry = { path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
